/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -105,10 +105,14 @@ Concepts used:
 
 ### a
 
-- By Radon-Nikodym, if $\lambda \ll \mu$ then $d\lambda = f d\mu$, which would yield 
-\[  
-\int g ~d\lambda = \int g f ~d\mu
-.\]
+- Strategy: use approximation by simple functions to show absolute continuity and apply Radon-Nikodym 
+
+- Claim: $\lambda \ll \mu$, i.e. $\mu(E) = 0 \implies \lambda(E) = 0$.
+
+  - Note that if this holds, by Radon-Nikodym, $f = \dd{\lambda}{\mu} \implies d\lambda = f d\mu$, which would yield 
+  \[  
+  \int g ~d\lambda = \int g f ~d\mu
+  .\]
 
 - So let $E$ be measurable and suppose $\mu(E) = 0$.
 
@@ -121,34 +125,36 @@ Concepts used:
 
 - But since each $E_j \subseteq E$, we must have $\mu(E_j) = 0$ for any such $E_j$, so every such $s_n$ must be zero and thus $\lambda(E) = 0$.
 
+\todo{What is the final step in this approximation?}
+
 ### b
 
-By Radon-Nikodym, there exists a positive $f$ such that
-\begin{align*}
-\int g ~dm = \int gf ~d\mu 
-,\end{align*}
+- Set $g(x) = x^2$
+- By part (a), there exists a positive $f$ such that for any $E\suybs
+\[
+\int_E g ~dm = \int_E gf ~d\mu 
+\]
 
-where we can take $g(x) = x^2$, then the LHS is zero by assumption and thus so is the RHS.
+  - The LHS is zero by assumption and thus so is the RHS.
 
 Note that $gf$ is positive.
 
 Define $A_k = \theset{x\in X \suchthat gf \chi_E > \frac 1 k}$, then by Chebyshev
-\begin{align*}
+\[
 \mu(A_k) \leq k \int_E gf ~d\mu = 0
-,\end{align*}
+\]
 
 which holds for every $k$.
 
 Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, and $gf$ is positive, we have 
-\begin{align*}
+\[
 x\in E \iff gf\chi_E(x) > 0 \iff x\in A
-,\end{align*}
+\]
 
 so $E = A$ and $\mu(E) = \mu(A)$.
 
 But since $m \ll \mu$ by construction, we can conclude that $m(E) = 0$.
 
-$\qed$
 
 ## 3
 
