/ ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -130,7 +130,7 @@ Concepts used:
 ### b
 
 - Set $g(x) = x^2$
-- By part (a), there exists a positive $f$ such that for any $E\suybs
+- By part (a), there exists a positive $f$ such that for any $E\subseteq \RR$,
 \[
 \int_E g ~dm = \int_E gf ~d\mu 
 \]
