/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -129,7 +129,7 @@ Concepts used:
 
 ### b
 
-- Set $g(x) = x^2$
+- Set $g(x) = x^2$, note that $g$ is positive and measurable.
 - By part (a), there exists a positive $f$ such that for any $E\subseteq \RR$,
 \[
 \int_E g ~dm = \int_E gf ~d\mu 
@@ -137,16 +137,16 @@ Concepts used:
 
   - The LHS is zero by assumption and thus so is the RHS.
 
-Note that $gf$ is positive.
+- Note that $gf$ is positive.
 
-Define $A_k = \theset{x\in X \suchthat gf \chi_E > \frac 1 k}$, then by Chebyshev
+- Define $A_k = \theset{x\in X \suchthat gf \chi_E > \frac 1 k}$, then by Chebyshev
 \[
 \mu(A_k) \leq k \int_E gf ~d\mu = 0
 \]
 
 which holds for every $k$.
 
-Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, and $gf$ is positive, we have 
+- Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, and $gf$ is positive, we have 
 \[
 x\in E \iff gf\chi_E(x) > 0 \iff x\in A
 \]
