/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -139,21 +139,18 @@ Concepts used:
 
 - Note that $gf$ is positive.
 
-- Define $A_k = \theset{x\in X \suchthat gf \chi_E > \frac 1 k}$, then by Chebyshe
+- Define $A_k = \theset{x\in X \suchthat gf \chi_E > \frac 1 k}$, then by Chebyshev, for every $k$ we have
 \[
 \mu(A_k) \leq k \int_E gf ~d\mu = 0
 \]
-
-which holds for every $k$.
 
 - Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, and $gf$ is positive, we have 
 \[
 x\in E \iff gf\chi_E(x) > 0 \iff x\in A
 \]
+  so $E = A$ and $\mu(E) = \mu(A)$.
 
-so $E = A$ and $\mu(E) = \mu(A)$.
-
-But since $m \ll \mu$ by construction, we can conclude that $m(E) = 0$.
+- But since $m \ll \mu$ by construction, we can conclude that $m(E) = 0$.
 
 
 ## 3
