/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -137,7 +137,7 @@ Concepts used:
 
   - The LHS is zero by assumption and thus so is the RHS.
 
-  - $m \ll \
+  - $m \ll \mu$ by construction.
 
 - Note that $gf$ is positive.
 
