/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -153,13 +153,15 @@ A_c \definedas \theset{ x\in X \suchthat \abs{f(x)} \geq c  } \implies \mu(A_c) 
 \mu(A_k) \leq k \int_E gf ~d\mu = 0
 \]
 
-- Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, and $gf$ is positive, we have 
+- Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, we have $\mu(A) = 0$.
+
+- Since $gf$ is positive, we have 
 \[
 x\in E \iff gf\chi_E(x) > 0 \iff x\in A
 \]
   so $E = A$ and $\mu(E) = \mu(A)$.
 
-- But since $m \ll \mu$ by construction, we can conclude that $m(E) = 0$.
+- But $m \ll \mu$ and $\mu(E) = 0$, so we can conclude that $m(E) = 0$.
 
 
 ## 3
