/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -153,7 +153,7 @@ A_c \definedas \theset{ x\in X \suchthat \abs{f(x)} \geq c  } \implies \mu(A_c) 
 \mu(A_k) \leq k \int_E gf ~d\mu = 0
 \]
 
-- Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0}$, we have $\mu(A) = 0$.
+- Then noting that $A_k \searrow A \definedas \theset{x\in E \suchthat x^2  > 0} = \theset{g > 0}$, we have $\mu(A) = 0$.
 
 - Since $gf$ is positive, we have 
 \[
