/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -192,25 +192,38 @@ so $f$ is not integrable.
 
 ## 5
 
+## 6
+
 > See https://math.stackexchange.com/questions/507263/prove-that-c1a-b-with-the-c1-norm-is-a-banach-space
 
-This is clearly a norm, which we'll write $\norm{\wait}_u$
+- Denote this norm $\norm{\wait}_u$
 
-Let $f_n$ be a Cauchy sequence and define a candidate limit $f(x) = \lim_n f_n(x)$.
+- Let $f_n$ be a Cauchy sequence in this space, so $\norm{f_n}_u < \infty$ for every $n$ and $\norm{f_j - f_k}_u \converges{j, k\to\infty}\to 0$.
 
-Then noting that $\norm{f_n}_\infty, \norm{f_n'}\infty \leq \norm{f_n}_u < \infty$, both $f_n, f_n$ are Cauchy sequences in $C^0([a, b], \norm{\wait}_\infty)$, which is a Banach space.
+and define a candidate limit: for each $x\in I$, set \[f(x) \definedas \lim_{n\to\infty} f_n(x).\]
 
-So $f_n \to f$ uniformly, and $f_n' \to g$ uniformly for some $g$, and moreover $f, g\in C^0([a, b])$.
+- Note that 
+\[ 
+\norm{f_n}_\infty &\leq \norm{f_n}_u < \infty \\
+\norm{f_n'}_\infty &\leq \norm{f_n}_u < \infty
+.\]
 
-We thus have
-\begin{align*}
-f_n(x) - f_n(a) \quad &\converges{u}\to f(x) - f(a) \\
-\int_a^x f'_n  \quad &\converges{u}\to \int_a^x  g
-,\end{align*}
- 
-and by the FTC, the left-hand sides are equal, and by uniqueness of limits so are the right-hand sides, so $f' = g$.
+  - Thus both $f_n, f_n$ are Cauchy sequences in $C^0([a, b], \norm{\wait}_\infty)$, which is a Banach space, so they converge.
 
-Since $f, f'\in C^0([a, b])$, they are bounded, and so $\norm{f}_u < \infty$. 
+- So 
+  - $f_n \to f$ uniformly (by uniqueness of limits), 
+  - $f_n' \to g$ uniformly for some $g$, and
+  - $f, g\in C^0([a, b])$.
+
+- Claim: $g = f'$
+  - For any fixed $a\in I$, we have
+  \[
+  f_n(x) - f_n(a) \quad &\converges{u}\to f(x) - f(a) \\
+  \int_a^x f'_n  \quad &\converges{u}\to \int_a^x  g
+  .\]
+  - By the FTC, the left-hand sides are equal.
+  - By uniqueness of limits so are the right-hand sides, so $f' = g$.
+
+- Since $f, f'\in C^0([a, b])$, they are bounded, and so $\norm{f}_u < \infty$. 
 This means that $\norm{f_n - f}_u \to 0$, so $f_n$ converges to $f$, which is in the same space.
 
-$\qed$
