/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -224,6 +224,10 @@ and define a candidate limit: for each $x\in I$, set \[f(x) \definedas \lim_{n\t
   - By the FTC, the left-hand sides are equal.
   - By uniqueness of limits so are the right-hand sides, so $f' = g$.
 
-- Since $f, f'\in C^0([a, b])$, they are bounded, and so $\norm{f}_u < \infty$. 
-This means that $\norm{f_n - f}_u \to 0$, so $f_n$ converges to $f$, which is in the same space.
+- Claim: the limit $f$ is an element in this space.
+  - Since $f, f'\in C^0([a, b])$, they are bounded, and so $\norm{f}_u < \infty$. 
+
+- Claim: $\norm{f_n - f}_u \converges{n\to\infty}\to 0$
+
+- $\norm{f_n - f}_u \to 0$, so $f_n$ converges to $f$, which is in the same space.
 
