/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -208,7 +208,7 @@ and define a candidate limit: for each $x\in I$, set \[f(x) \definedas \lim_{n\t
 \norm{f_n'}_\infty &\leq \norm{f_n}_u < \infty
 .\]
 
-  - Thus both $f_n, f_n$ are Cauchy sequences in $C^0([a, b], \norm{\wait}_\infty)$, which is a Banach space, so they converge.
+  - Thus both $f_n, f_n'$ are Cauchy sequences in $C^0([a, b], \norm{\wait}_\infty)$, which is a Banach space, so they converge.
 
 - So 
   - $f_n \to f$ uniformly (by uniqueness of limits), 
