--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -1,3 +1,12 @@
 # Fall 2016
 
 ## 1
+
+- Set $f_N(x) \definedas \sum_{n=1}^N n^{-x}$, so $f(x) = \lim_{N\to\infty} f_N(x)$.
+- If an interchange of limits is justified, we have
+\[  
+\dd{}{x} \lim_{N\to\infty} \sum_{n=1}^N n^{-x}
+&= \lim_{N\to\infty} \dd{}{x} \sum_{n=1}^N n^{-x} \\
+&= \lim_{N\to\infty} \sum_{n=1}^N \dd{}{x} n^{-x} \quad\text{(since this is a finite sum)}\\
+&= \lim_{N\to\infty} \sum_{n=1}^N {-\ln(n) \over n^x} 
+.\]
