/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -8,6 +8,6 @@
 \dd{}{x} \lim_{N\to\infty} \sum_{n=1}^N n^{-x}
 &= \lim_{N\to\infty} \dd{}{x} \sum_{n=1}^N n^{-x} \\
 &= \lim_{N\to\infty} \sum_{n=1}^N \dd{}{x} n^{-x} \quad\text{(since this is a finite sum)}\\
-&= \lim_{N\to\infty} \sum_{n=1}^N {-\ln(n) \over n^x} 
+&= \lim_{N\to\infty} \sum_{n=1}^N {-\ln(n) \over n^x}  \\
 &= \lim_{N\to\infty} \sum_{n=1}^N {\ln({1\over n}) \over n^x} 
 .\]
