/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -10,4 +10,17 @@
 &= \lim_{N\to\infty} \sum_{n=1}^N \dd{}{x} n^{-x} \quad\text{(since this is a finite sum)}\\
 &= \lim_{N\to\infty} \sum_{n=1}^N {-\ln(n) \over n^x}  \\
 &= \lim_{N\to\infty} \sum_{n=1}^N {\ln\qty{{1\over n}} \over n^x} 
-.\]
+,\]
+  so it suffices to show the last sum converges on $(1, \infty)$.
+
+\todo{No idea how. But if this works, does this show both parts?}
+
+## 2
+
+- If $\int f = \int g$ then $\int \qty{f-g} = 0$, so it suffices to show that $\int f = 0 \implies f = 0$ a.e. or there exists a measurable set $E$ such that $\int_E f > 0$.
+
+- 
+
+
+
+
