--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -19,7 +19,8 @@
 
 - If $\int f = \int g$ then $\int \qty{f-g} = 0$, so it suffices to show that $\int f = 0 \implies f = 0$ a.e. or there exists a measurable set $E$ such that $\int_E f > 0$.
 
-- Suppose $\int f = 0$ and $
+- Suppose $\int f = 0$ and it is *not* the case that $f=0$ a.e.
+- By definition, $m
 
 
 
