/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -34,7 +34,7 @@
   - Then
   \[  
   \norm{\tau_yf - f}_1 
-  &= \norm{\tau_y f - \tau_y g_n + \tau_y g_n - g_n +
+  &= \norm{\tau_y f - \tau_y g_n + \tau_y g_n - g_n +g_n - f}_{1}
   .\]
 
 
