--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -35,6 +35,7 @@
   \[  
   \norm{\tau_yf - f}_1 
   &= \norm{\tau_y f - \tau_y g_n + \tau_y g_n - g_n +g_n - f}_{1}
+  &\leq \norm{\tau_y f - \tau_y g_n}_1 + \norm{\tau_y g_n - g_n}_1 + \norm{g_n - f}_{1}
   .\]
 
 
