/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -29,7 +29,7 @@
 \[  
 \norm{\tau_yf -f}_{L^1} \converges{y\to 0}\to 0
 .\]
-- By an $\eps/3$ argument, it suffices to show this for compactly support functions:
+- By an $\eps/3$ argument, it suffices to show this for compactly supported functions:
   - Since $f\in L^1$, choose $g_n\subset C_c^\infty(\RR^1)$ smooth and compactly supported so that $\norm{f-g_n}_{L^1} \to 0$
   - Then
   \[  
@@ -39,5 +39,5 @@
   &\leq 2\eps + \norm{\tau_y g_n - g_n}
   .\]
 
-
+-
 
