/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -36,8 +36,11 @@
   \norm{\tau_yf - f}_1 
   &= \norm{\tau_y f - \tau_y g_n + \tau_y g_n - g_n +g_n - f}_{1} \\
   &\leq \norm{\tau_y f - \tau_y g_n}_1 + \norm{\tau_y g_n - g_n}_1 + \norm{g_n - f}_{1} \\
-  &\leq 2\eps + \norm{\tau_y g_n - g_n}
+  &\leq 2\eps + \norm{\tau_y g_n - g_n}_1
   .\]
 
--
+- Write
+\[  
+\norm{\tau_y g
+.\]
 
