/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -39,8 +39,8 @@
   &\leq 2\eps + \norm{\tau_y g_n - g_n}_1
   .\]
 
-- Let $g\in C_c^\infty(\RR^1)$ and write
+- Let $g\in C_c^\infty(\RR^1)$, let $E = \supand write
 \[  
-\norm{\tau_y g_n - g_n}_1
+\norm{\tau_y g_n - g_n}_1 = \i
 .\]
 
