/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -39,8 +39,10 @@
   &\leq 2\eps + \norm{\tau_y g_n - g_n}_1
   .\]
 
-- Let $g\in C_c^\infty(\RR^1)$, let $E = \supand write
+- Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
 \[  
-\norm{\tau_y g_n - g_n}_1 = \i
+\norm{\tau_y g_n - g_n}_1 
+&= \int_\RR g(x)\,dx \\
+&= \int_E f(x)\dx 
 .\]
 
