/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -43,6 +43,6 @@
 \[  
 \norm{\tau_y g_n - g_n}_1 
 &= \int_\RR g(x)\,dx \\
-&= \int_E f(x)\dx + \int_{
+&= \int_E g(x)\dx + \int_{E^c} g(x)\,dx
 .\]
 
