/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -42,7 +42,7 @@
 - Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
 \[  
 \norm{\tau_y g_n - g_n}_1 
-&= \int_\RR g(x)\,dx \\
-&= \int_E g(x)\dx + \int_{E^c} g(x)\,dx
+&= \int_\RR \abs{g(g(x)\,dx \\
+&= \int_E g(x)\,dx + \int_{E^c} g(x)\,dx
 .\]
 
