/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -25,7 +25,7 @@
 
 ## 3
 
-- Fixing notation, set $\tau_x f(y) f(y-x)$; we then want to show
+- Fixing notation, set $\tau_x f(y) = f(y-x)$; we then want to show
 \[  
 \norm{\tau_yf -f}_{L^1} \converges{y\to 0}\to 0
 .\]
