/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -34,15 +34,15 @@
   - Then
   \[  
   \norm{\tau_x f - f}_1 
-  &= \norm{\tau_x f - \tau_y g_n + \tau_y g_n - g_n +g_n - f}_{1} \\
-  &\leq \norm{\tau_y f - \tau_y g_n}_1 + \norm{\tau_y g_n - g_n}_1 + \norm{g_n - f}_{1} \\
-  &\leq 2\eps + \norm{\tau_y g_n - g_n}_1
+  &= \norm{\tau_x f - \tau_x g_n + \tau_x g_n - g_n +g_n - f}_{1} \\
+  &\leq \norm{\tau_x f - \tau_x g_n}_1 + \norm{\tau_x g_n - g_n}_1 + \norm{g_n - f}_{1} \\
+  &\leq 2\eps + \norm{\tau_x g_n - g_n}_1
   .\]
 
 - Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
 \[  
-\norm{\tau_y g_n - g_n}_1 
+\norm{\tau_x g_n - g_n}_1 
 &= \int_\RR \abs{g(y-x) - g(y)\,dy \\
-&= \int_E g(y)\,dy + \int_{E^c} g(y)\,dy
+&= \int_E \abs{g(y)\,dy + \int_{E^c} g(y)\,dy
 .\]
 
