/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -42,7 +42,8 @@
 - Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
 \[  
 \norm{\tau_x g_n - g_n}_1 
-&= \int_\RR \abs{g(y-x) - g(y)\,dy \\
+&= \int_\RR \abs{g(y-x) - g(y)}\,dy \\
 &= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy
+&= \int_E \abs{g(y-x) - g(y)} \,dy 
 .\]
 
