/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -43,7 +43,7 @@
 \[  
 \norm{\tau_x g_n - g_n}_1 
 &= \int_\RR \abs{g(y-x) - g(y)}\,dy \\
-&= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy
+&= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy\\
 &= \int_E \abs{g(y-x) - g(y)} \,dy 
 .\]
 
