/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -47,5 +47,8 @@
 &= \int_E \abs{g(y-x) - g(y)} \,dy 
 .\]
 
-- B
+- But $g$ is smooth and compactly supported on $E$, and thus uniformly continuous on $E$, so
+\[  
+\lim_{
+.\]
 
