--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -49,6 +49,7 @@
 
 - But $g$ is smooth and compactly supported on $E$, and thus uniformly continuous on $E$, so
 \[  
-\lim_{
+\lim_{x\to 0} \int_E \abs{g(y-x) - g(y)} \,dy =
+\int_E \lim_{x\to 0} \abs{g(y-x) - g(y)} \,dy 
 .\]
 
