/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -49,7 +49,9 @@
 
 - But $g$ is smooth and compactly supported on $E$, and thus uniformly continuous on $E$, so
 \[  
-\lim_{x\to 0} \int_E \abs{g(y-x) - g(y)} \,dy =
-\int_E \lim_{x\to 0} \abs{g(y-x) - g(y)} \,dy 
+\lim_{x\to 0} \int_E \abs{g(y-x) - g(y)} \,dy 
+&= \int_E \lim_{x\to 0} \abs{g(y-x) - g(y)} \,dy \\
+&= \int_E 0 \,dy \\
+&= 0
 .\]
 
