--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -60,4 +60,13 @@
 
 ## 4
 
+- Claim: $G\in \mcm$.
+  - Claim:
+  \[  
+  G = \intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c
+  .\]
 
+    - This follows because $x$ is in the RHS iff $x\in E_n^c$ for infinitely many $n$ iff $x\in E_n$ for at most finitely many $n$.
+
+  - But now $G$ is obtained by countable intersections/unions of measurable sets, since $E_n\in \mcm$ for all $n$ implies that $E_n^c\in \mcm$ and $\mcm$ is a $\sigma\dash$algebra.
+  
