--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -70,5 +70,5 @@
 
   - But now $G$ is obtained by countable intersections/unions of measurable sets, since $E_n\in \mcm$ for all $n$ implies that $E_n^c\in \mcm$ and $\mcm$ is a $\sigma\dash$algebra.
 
-
+- Claim: $\mu(G) = 0$:
   
