--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -70,5 +70,11 @@
 
   - But now $G$ is obtained by countable intersections/unions of measurable sets, since $E_n\in \mcm$ for all $n$ implies that $E_n^c\in \mcm$ and $\mcm$ is a $\sigma\dash$algebra.
 
-- Claim: $\mu(G) = 0$:
+- Claim: $\mu(G) = 0$.
+
+  - We have
+  \[  
+  \mu(G)
+  \mu\qty{\intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c}
+  .\]
   
