--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -75,6 +75,7 @@
   - We have
   \[  
   \mu(G)
-  \mu\qty{\intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c}
+  &= \mu\qty{\intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c} \\
+  &\leq \mu \qty{\union_{n=N
   .\]
   
