/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -76,6 +76,7 @@
   \[  
   \mu(G)
   &= \mu\qty{\intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c} \\
-  &\leq \mu \qty{\union_{n=N}^\infty
+  &\leq \mu \qty{\union_{n=N}^\infty E_n^c} \quad\text{for every } N \\
+  &= \mu
   .\]
   
