/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -77,6 +77,6 @@
   \mu(G)
   &= \mu\qty{\intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c} \\
   &\leq \mu \qty{\union_{n=N}^\infty E_n^c} \quad\text{for every } N \\
-  &
+  &\leq \sum_{n=N}^\infty \mu(E_
   .\]
   
