/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -79,5 +79,7 @@
   &\leq \mu \qty{\union_{n=N}^\infty E_n^c} \quad\text{for every } N \\
   &\leq \sum_{n=N}^\infty \mu(E_n^c) \\
   &\definedas \sum_{n=N}^\infty \mu(X\setminus E_n) \\
+  &\converges{N\to\infty}\to 0
   .\]
+  \todo{Last step sketchy.}
   
