/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -63,7 +63,7 @@
 - Claim: $G\in \mcm$.
   - Claim:
   \[  
-  G = \intersect_{N=1}^\infty \union_{n=N}^\infty E_n^c
+  G = \qty{ \intersect_{N=1}^\infty \union_{n=N}^\infty E_n}^c
   .\]
 
     - This follows because $x$ is in the RHS iff $x\in E_n^c$ for infinitely many $n$ iff $x\in E_n$ for at most finitely many $n$.
