--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -13,7 +13,7 @@
 &\definedas \lim_{N\to\infty} \sum_{n=1}^N \dd{}{x}\qty{1 \over n^x} \\ 
 &= \lim_{N\to\infty} \sum_{n=1}^N -{\ln(n) \over n^x}
 ,\]
-  so it suffices to show that the last sum converges on $(1, \infty)$.
+  so it suffices to justify show that the last sum converges on $(1, \infty)$.
 
 
 
