/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -13,8 +13,15 @@
 &\definedas \lim_{N\to\infty} \sum_{n=1}^N \dd{}{x}\qty{1 \over n^x} \\ 
 &= \lim_{N\to\infty} \sum_{n=1}^N -{\ln(n) \over n^x}
 ,\]
-  where the combining of sums in (1) is valid because $\sum n^{-x}
-  so it suffices to justify show that the last sum converges on $(1, \infty)$.
+  where the combining of sums in (1) is valid because $\sum n^{-x}$ is absolutely convergent for $x>1$ by the $p\dash$test.
+
+- Thus it suffices to justify the interchange of limits and show that the last sum converges on $(1, \infty)$.
+
+- Claim: $\sum n^{-x}\ln(n)$ converges.
+  - Use the fact that
+  \[  
+  \lim_{n\to\infty} {\ln(n) \over n^x} =
+  .\]
 
 
 
