/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -20,8 +20,11 @@
 - Claim: $\sum n^{-x}\ln(n)$ converges.
   - Use the fact that
   \[  
-  \lim_{n\to\infty} {\ln(n) \over n^x} =
-  .\]
+  \lim_{n\to\infty} {\ln(n) \over n^x} 
+  \equalsbecause{L.H.} \lim_{n\to\infty}{1/n \over xn^{x-1}} 
+  = \lim_{n\to\infty} {1\over xn^x} = 0
+  ,\]
+  which implies that for any fixed $x$, there exists an $N$ large enough such that $n\geq N$ implies $
 
 
 
