--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -23,8 +23,8 @@
   \lim_{n\to\infty} {\ln(n) \over n^x} 
   \equalsbecause{L.H.} \lim_{n\to\infty}{1/n \over xn^{x-1}} 
   = \lim_{n\to\infty} {1\over xn^x} = 0
-  ,\]
-  which implies that for any fixed $x$, there exists an $N$ large enough such that $n\geq N$ implies $
+  .\]
+  - This implies that for any fixed $x$ and $\eps$, there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^x < \eps$, 
 
 
 
