--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -24,7 +24,7 @@
   \equalsbecause{L.H.} \lim_{n\to\infty}{1/n \over \delta n^{\delta-1}} 
   = \lim_{n\to\infty} {1\over \delta n^\delta} = 0
   ,\]
-  - This implies that for a fixed $\delta >0$ and for any $\eps>0$ there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^\delta < \eps$, i.e. $\ln(n) < \eps n^{\delta}$.
+  - This implies that for a fixed $\delta >0$ and for any constant $\eps>0$ there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^\delta < \eps$, i.e. $\ln(n) < \eps n^{\delta}$.
 
 
 
