/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -18,13 +18,13 @@
 - Thus it suffices to justify the interchange of limits and show that the last sum converges on $(1, \infty)$.
 
 - Claim: $\sum n^{-x}\ln(n)$ converges.
-  - Use the fact that for any fixed $\delta>0$,
+  - Use the fact that for any fixed $\eps>0$,
   \[  
-  \lim_{n\to\infty} {\ln(n) \over n^\delta} 
-  \equalsbecause{L.H.} \lim_{n\to\infty}{1/n \over \delta n^{\delta-1}} 
-  = \lim_{n\to\infty} {1\over \delta n^\delta} = 0
+  \lim_{n\to\infty} {\ln(n) \over n^\eps} 
+  \equalsbecause{L.H.} \lim_{n\to\infty}{1/n \over \eps n^{\eps-1}} 
+  = \lim_{n\to\infty} {1\over \eps n^\eps} = 0
   ,\]
-  - This implies that for a fixed $\delta >0$ and for any constant $\eps>0$ there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^\delta < \eps$, i.e. $\ln(n) < \eps n^{\delta}$.
+  - This implies that for a fixed $\eps >0$ and for any constant $\eps>0$ there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^\delta < \eps$, i.e. $\ln(n) < \eps n^{\delta}$.
 
 
 
