--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -25,7 +25,11 @@
   = \lim_{n\to\infty} {1\over \eps n^\eps} = 0
   ,\]
   - This implies that for a fixed $\eps >0$ and for any constant $c>0$ there exists an $N$ large enough such that $n\geq N$ implies $\ln(n)/n^\eps < c$, i.e. $\ln(n) < c n^{\eps}$.
-  - Taking $c=1$
+  - Taking $c=1$, we have $n\geq N \implies \ln(n) < n^\eps$
+  - We thus break up the sum:
+  \[  
+  
+  .\]
 
 
 
