--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -28,7 +28,9 @@
   - Taking $c=1$, we have $n\geq N \implies \ln(n) < n^\eps$
   - We thus break up the sum:
   \[  
-  \sum_{n\in \NN} n^{-x} \ln(n) = \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty
+  \sum_{n\in \NN} n^{-x} \ln(n) 
+  &= \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty n^{-x} \ln(n) \\
+  &\leq \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty n^{-x} \ln(n) \\
   .\]
 
 
