/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -28,9 +28,10 @@
   - Taking $c=1$, we have $n\geq N \implies \ln(n) < n^\eps$
   - We thus break up the sum:
   \[  
-  \sum_{n\in \NN} n^{-x} \ln(n) 
-  &= \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty n^{-x} \ln(n) \\
-  &\leq \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty n^{-x} \ln(n) \\
+  \sum_{n\in \NN} {\ln(n) \over n^x} 
+  &= \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {\ln(n) \over n^x} \\
+  &\leq \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty {n^\eps \over n^x} \\
+  &
   .\]
 
 
