/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -30,8 +30,9 @@
   \[  
   \sum_{n\in \NN} {\ln(n) \over n^x} 
   &= \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {\ln(n) \over n^x} \\
-  &\leq \sum_{n=1}^{N-1} n^{-x} \ln(n) + \sum_{n=N}^\infty {n^\eps \over n^x} \\
-  &
+  &\leq \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {n^\eps \over n^x} \\
+  &\definedas \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {n^\eps \over n^x} \\
+  & + \sum_{n=N}^\infty {n^\eps \over n^x} \\
   .\]
 
 
