--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -32,10 +32,11 @@
   &= \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {\ln(n) \over n^x} \\
   &\leq \sum_{n=1}^{N-1} { \ln(n) \over n^x} + \sum_{n=N}^\infty {n^\eps \over n^x} \\
   &\definedas C_\eps + \sum_{n=N}^\infty {n^\eps \over n^x} \quad \text{with $C_\eps<\infty$ a constant}\\
-  &= C_\eps + \sum_{n=N}^\infty {1 \over n^{x-\eps}}  \\
+  &= C_\eps + \sum_{n=N}^\infty {1 \over n^{x-\eps}}
   ,\]
   where the last term converges by the $p\dash$test if $x-\eps > 1$.
 
+  - But $\eps$ can depend on $x$, and if $x\in (1, \infty)$ 
 
 
 
