--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -46,9 +46,9 @@
 
 ## 2
 
-- If $\int f = \int g$ then $\int \qty{f-g} = 0$, so it suffices to show that $\int f = 0 \implies f = 0$ a.e. or there exists a measurable set $E$ such that $\int_E f > 0$.
 
-- Suppose $\int f = 0$ and it is *not* the case that $f=0$ a.e.
+- Suppose it is *not* the case that $f=g$ almost everywhere; then letting $E\definedas \theset{x\in [a,b] \suchthat f(x) \neq g(x)$, we have $m(E) > 0$.
+- Write $E = \theset{f>g} \disjoint \theset{f\leq g}$
 
 ## 3
 
