--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -47,8 +47,8 @@
 ## 2
 
 
-- Suppose it is *not* the case that $f=g$ almost everywhere; then letting $E\definedas \theset{x\in [a,b] \suchthat f(x) \neq g(x)$, we have $m(E) > 0$.
-- Write $E = \theset{f>g} \disjoint \theset{f\leq g}$
+- Suppose it is *not* the case that $f=g$ almost everywhere; then letting $A\definedas \theset{x\in [a,b] \suchthat f(x) \neq g(x)$, we have $m(E) > 0$.
+- Write $A = \theset{f>g} \disjoint \theset{f\leq g}$; 
 
 ## 3
 
