/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -48,7 +48,7 @@
 
 
 - Suppose it is *not* the case that $f=g$ almost everywhere; then letting $A\definedas \theset{x\in [a,b] \suchthat f(x) \neq g(x)}$, we have $m(A) > 0$.
-- Write $A = \theset{f>g} \disjoint \theset{f\leq g}$, then one of these sets must have positive measure; wlog suppose it is $E\definedas \theset{f>g}$ so $m(E) > 0$.
+- Write $A = \theset{f>g} \disjoint \theset{f=g} \disjoint \theset{f< g}$, then one of these sets must have positive measure; wlog suppose it is $E\definedas \theset{f>g}$ so $m(E) > 0$.
 
 ## 3
 
