--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -54,7 +54,7 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 ,\]
   then $m(A_1) > 0$ or $m(A_2) > 0$ (or both).
 
-- Wlog (by relabeling $f, g$ if necessary), suppose $m(A_1) > 0$.
+- Wlog (by relabeling $f, g$ if necessary), suppose $m(A_1) > 0$
 
 
 ## 3
