/ ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -59,7 +59,7 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 - Then on $A_1$, we have $f(x)>g(x)$ pointwise. 
   This is preserved by monotonicity of the integral, thus
   \[  
-  f(x) > g(x) \text{ on } A_1 \implies \int_{ 
+  f(x) > g(x) \text{ on } A_1 \implies \int_{E} 
   .\]  
 
 
