/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -54,12 +54,12 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 ,\]
   then $m(A_1) > 0$ or $m(A_2) > 0$ (or both).
 
-- Wlog (by relabeling $f, g$ if necessary), suppose $m(A_1) > 0$.
+- Wlog (by relabeling $f, g$ if necessary), suppose $m(A_1) > 0$, and take $E\definedas A_1$.
 
-- Then on $A_1$, we have $f(x)>g(x)$ pointwise. 
+- Then on $E$, we have $f(x)>g(x)$ pointwise. 
   This is preserved by monotonicity of the integral, thus
   \[  
-  f(x) > g(x) \text{ on } A_1 \implies \int_{E} 
+  f(x) > g(x) \text{ on } E \implies \int_{E} f(x)\,dx > \int_{E}  
   .\]  
 
 
