--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -70,12 +70,13 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 .\]
 - By an $\eps/3$ argument, it suffices to show this for compactly supported functions:
   - Since $f\in L^1$, choose $g_n\subset C_c^\infty(\RR^1)$ smooth and compactly supported so that $\norm{f-g}_{L^1} < \eps$
+  
   - Then
   \[  
   \norm{\tau_x f - f}_1 
-  &= \norm{\tau_x f - \tau_x g_n + \tau_x g_n - g_n +g_n - f}_{1} \\
-  &\leq \norm{\tau_x f - \tau_x g_n}_1 + \norm{\tau_x g_n - g_n}_1 + \norm{g_n - f}_{1} \\
-  &\leq 2\eps + \norm{\tau_x g_n - g_n}_1
+  &= \norm{\tau_x f - \tau_x g + \tau_x g - g +g - f}_{1} \\
+  &\leq \norm{\tau_x f - \tau_x g}_1 + \norm{\tau_x g - g}_1 + \norm{g - f}_{1} \\
+  &\leq 2\eps + \norm{\tau_x g - g}_1
   .\]
   \todo{Need to argue that $\tau g_n$ approximates $\tau f$.}
 
