/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -71,7 +71,10 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 - By an $\eps/3$ argument, it suffices to show this for compactly supported functions:
   - Since $f\in L^1$, choose $g_n\subset C_c^\infty(\RR^1)$ smooth and compactly supported so that $\norm{f-g}_{L^1} < \eps$
   - Claim: $\norm{\tau f - \tau g} < \eps$.
-    
+    - This follows from a change of variables:
+    \[  
+    \int_\RR \abs{}
+    .\]
   - Then
   \[  
   \norm{\tau_x f - f}_1 
