--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -75,7 +75,8 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
     \[  
     \int_\RR \abs{\tau_x f(y) - \tau_x g(y)}\, dy
     &=
-    \int_\RR \abs{\tau_x f(y) - \tau_x g(y)}\, dy
+    \int_\RR \abs{f(y-x) - g(y-x)}\, dy  \\
+    
     .\]
   - Then
   \[  
