--- a/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
+++ b/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
@@ -134,16 +134,18 @@ b. Suppose $\Omega$ is a region with compact closure $\bar \Omega$.
 
 Problem
 : Prove that if $f$ has two Laurent series expansions,
-  $$
-  \begin{aligned} f(z) = \sum c_n(z-a)^n \quad\text{and}\quad f(z) = \sum c_n'(z-a)^n\end{aligned}
-  $$
+  \[
+  f(z) = \sum c_n(z-a)^n \quad\text{and}\quad f(z) = \sum c_n'(z-a)^n
+  \]
   then $c_n = c_n'$.
 
 ### 2
 
 Problem
 : Find Laurent series expansions of
-  $$\begin{aligned}\frac{1}{1-z^2} + \frac{1}{3-z}\end{aligned}$$
+  \[
+  \frac{1}{1-z^2} + \frac{1}{3-z}
+  \]
   How many such expansions are there? In what domains are each valid?
 
 ### 3
@@ -174,7 +176,9 @@ $f$ is a polynomial.
 Problem
 :   \hfill
     a. Show (without using 3.8.9 in the S&S) that
-    $$\begin{aligned}\int_0^{2\pi} \log\abs{1 - e^{i\theta}}~d\theta = 0\end{aligned}$$
+    \[
+    \int_0^{2\pi} \log\abs{1 - e^{i\theta}}~d\theta = 0
+    \]
     b. Show that this identity is equivalent to S&S 3.8.9:
     \[
     \int_0^1 \log(\sin(\pi x)) ~dx = -\log 2
