/ ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.md’ / ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.pdf’ / ‘Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md’

--- a/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
+++ b/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
@@ -187,8 +187,10 @@ Problem
 ### 7
 
 Problem
-: Let $0<a<4$ and evaluate $$\begin{aligned}
-    \int_0^\infty \frac{x^{\alpha-1}}{1+x^3} ~dx\end{aligned}$$
+: Let $0<a<4$ and evaluate 
+  $$\begin{aligned}
+  \int_0^\infty \frac{x^{\alpha-1}}{1+x^3} ~dx
+  \end{aligned}$$
 
 ### 8
 
