/ ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.md’ / ‘Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md’

--- a/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
+++ b/Complex Analysis/UGA Questions/sections/093_Spring2020_HW3.md
@@ -188,9 +188,9 @@ Problem
 
 Problem
 : Let $0<a<4$ and evaluate 
-  $$\begin{aligned}
+  \[
   \int_0^\infty \frac{x^{\alpha-1}}{1+x^3} ~dx
-  \end{aligned}$$
+  \]
 
 ### 8
 
@@ -212,7 +212,8 @@ $D$ with interior in $D$.
 
 Problem
 : For $a> 0$, evaluate
-  $$\begin{aligned} \int_0^{\pi/2} \frac{d\theta}{a + \sin^2 \theta}\end{aligned}$$
+  $$\begin{aligned} 
+  \int_0^{\pi/2} \frac{d\theta}{a + \sin^2 \theta}\end{aligned}$$
 
 ### 11
 
